Changes for 1.8.14rc1

...G...... [ZBX-3897] fixed processing of proc.num[] item under FreeBSD; thanks to Jim Riggs (Sasha)
..F....... [ZBX-4918] fixed value mapping when resolve {ITEM.LASTVALUE} and {ITEM.VALUE} macros (Vedmak)
A......... [ZBX-4917] fixed slow screens for non-Super-Admins (Toms)

Changes for 1.8.13

1.8.13rc1 was released as 1.8.13 without any changes

Changes for 1.8.13rc1

A.F....... [ZBX-4685] fixed hangup when users login at the same time (Toms)
....I..... [ZBX-4810] fixed the ifInOctets and ifOutOctets items in the Dell_PowerConnect_5224, Template_Dell_PowerConnect_5324, Template_C3750-48TS and Template_Cisco_PIX515E templates (Sasha)
...G...... [ZBXNEXT-1188] added support of "agent.hostname" check (Sasha)
.......PS. [ZBX-4857] fixed poller hanging on ssh check when using public key authentication (dimir)
........S. [ZBX-4881] fixed slow select queries from partitioned history tables (Sasha)
A.F....... [ZBX-4877] updated French translation; thanks to Joseph Bueno (Richlv)
..F....... [ZBX-4900] improved performance of the 'Status of Zabbix' dashboard widget (Vedmak)
...G...... [ZBX-4905] fixed processing of system.swap.in/out[,pages] under Linux 2.6 (Sasha)
...G...... [ZBX-4907] fixed processing of system.swap.in/out[,sectors/count] under Linux (Sasha)
........S. [ZBX-4884] fixed incorrect calculation of items using option "Delta (speed per second)" after recovery from unsupported state (Sasha)
..F....... [ZBX-4849] implemented a check that a trigger expression doesn't use items from both hosts and templates at the same time (Pavels)
....I..... [ZBX-3929] removed deprecated Switch module from the gen.pl script (Sasha)

Changes for 1.8.12

1.8.12rc2 was released as 1.8.12 without any changes

Changes for 1.8.12rc2

.......PS. [ZBX-4793] fixed processing of quoted strings in dynamic SNMP indexes (Sasha)
.......PS. [ZBX-4709] fixed processing of quoted strings in SNMP items (Sasha)

Changes for 1.8.12rc1
